name: ordrea-pipes
version: 0.0.0
synopsis: A bridge between ordrea and pipes
description: A bridge between ordrea and pipes
homepage: https://github.com/maoe/ordrea-pipes
bug-reports: https://github.com/maoe/ordrea-pipes/issues
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyright (C) 2014 Mitsutoshi Aoe
category: FRP
build-type: Simple
-- extra-source-files:
cabal-version: >= 1.10

library
  hs-source-dirs: src
  exposed-modules: FRP.Ordrea.Pipes
  -- other-extensions:
  build-depends:
      base >= 4.7 && < 4.8
    , ordrea == 0.3.*
    , pipes == 4.1.*
  default-language: Haskell2010
